Fix mobile overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,10 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  position: relative;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -28,9 +32,9 @@ a {
 }
 
 .outer-container {
-    @apply px-8 md:px-16;
+  @apply px-8 md:px-16;
 }
 
 .page {
-    @apply lg:h-page h-page_md;
+  @apply lg:h-page h-page_md;
 }
